*** empty log message ***

--- a/core/.cvsignore
+++ b/core/.cvsignore
@@ -1,9 +1,21 @@
-*.ilk
-*.pdb
-*.gen
+*.bak
+*.$$$
+*.dsp
+*.dsw
+*.d
+*.i
+*.obj
+*.exe
 *.lib
+*.o
 *.lst
+*.a
+*.gen
+*.gdl
+*.pdb
+*.ilk
 boomake*
+makefile*
 msmake*
 .spool
 amq_aclient.c
