--- a/servers/.cvsignore
+++ b/servers/.cvsignore
@@ -1,5 +1,22 @@
-boomake
-boomake.bat
+*.bak
+*.$$$
+*.dsp
+*.dsw
+*.d
+*.i
+*.obj
+*.exe
+*.lib
+*.o
+*.lst
+*.a
+*.gen
+*.gdl
+*.pdb
+*.ilk
+boomake*
+makefile*
+msmake*
 userguide.gdl
 userguide*.htm
 *.lst
