*** empty log message ***

--- a/clients/complus/.cvsignore
+++ b/clients/complus/.cvsignore
@@ -13,3 +13,41 @@ save
 testit.c
 boomake*
 version.h
+AMQ.cpp
+AMQ.def
+AMQ.dll
+AMQ.dsp
+AMQ.h
+AMQ.idl
+amq.plg
+AMQ.rc
+AMQ.tlb
+AMQConnection.cpp
+AMQConnection.h
+AMQConnection.rgs
+AMQControl.cpp
+AMQControl.h
+AMQControl.rgs
+AMQDestination.cpp
+AMQDestination.h
+AMQps.def
+AMQ_i.c
+AMQ_p.c
+common.h
+configure
+configure.bat
+dlldata.c
+dlldatax.c
+dlldatax.h
+Makefile
+Makefile.dev
+Makefile.src
+msmake
+msmake.dev
+msmake.src
+ReleaseMinDependency
+resource.h
+stdafx.cpp
+stdafx.h
+_IAMQDestinationEventsCP.h
+
