--- a/clients/.cvsignore
+++ b/clients/.cvsignore
@@ -1,11 +1,6 @@
 boomake*
 version.h
-configure
-configure.bat
-Makefile
-Makefile.dev
-Makefile.src
-msmake
-msmake.dev
-msmake.src
+configure*
+Makefile*
+msmake*
 
