--- a/core/amq_server.cfg
+++ b/core/amq_server.cfg
@@ -12,19 +12,20 @@
     that holds a configuration file called "amq_vhost.cfg".
  -->
 
-<server>
-    <port       value = "7654"  />
-    <background value = "0"     />
-</server>
+    <server
+        port = "7654"
+        background = "0"
+        />
 
-<logging>
-    <directory value = "logs"             />
-    <console   value = "amqp_console.log" />
-</logging>
+    <logging
+        directory = "logs"
+        console = "amqp_console.log"
+        />
 
-<vhosts>
-    <directory value = "vh_default" />
-    <directory value = "vh_test"    />
-</vhosts>
+    <vhosts>
+        <!-- Virtual hosts, each configured in their own directory -->
+        <vhost directory = "vh_default" />
+        <vhost directory = "vh_test"    />
+    </vhosts>
 
 </config>
