--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -4,25 +4,32 @@
     amq_vhost.cfg - OpenAMQ virtual host configuration file
 
     This file provides virtual host configuration.
+    This is a test host (/test).
  -->
 
-<vhost>
-    <name value = "/test" />
-    <text value = "Virtual host for regression tests"/>
-</vhost>
+    <vhost
+        name = "/test"
+        />
 
-<workdir>
-    <!-- This is where the Berkeley DB backing store is held      -->
-    <data  value = "data"  />
-    <!-- This is where partially uploaded large messages are held -->
-    <spool value = "spool" />
-    <!-- This is where fully-uploaded large messages are held     -->
-    <store value = "store" />
-</workdir>
+    <directories
+        data  = "data"
+        spool = "spool"
+        store = "store"
+        />
 
-<queue>
-    <name value = "test-small" />
-    <name value = "test-large" />
-</queue>
+    <queues>
+        <queue
+            name = "test"
+            block_size = "1024"
+            buffering = "1"
+            max_messages = "10000"
+            purge_on_restart = "0"
+            max_readers = "0"
+            cache_writes = "1"
+            browsable = "1"
+            max_message_size = "1Gb"
+            min_readers = "1"
+            />
+    </queues>
 
 </config>
