--- a/servers/.cvsignore
+++ b/servers/.cvsignore
@@ -15,18 +15,11 @@
 *.pdb
 *.ilk
 boomake*
-makefile*
+configure*
+Makefile*
 msmake*
 userguide.gdl
 userguide*.htm
 *.lst
 amqpsrv
-configure
-configure.bat
-Makefile
-Makefile.dev
-Makefile.src
-msmake
-msmake.dev
-msmake.src
 
