--- a/servers/vh_default/amq_vhost.cfg
+++ b/servers/vh_default/amq_vhost.cfg
@@ -4,25 +4,26 @@
     amq_vhost.cfg - OpenAMQ virtual host configuration file
 
     This file provides virtual host configuration.
+    This is the default host (/) for the server.
  -->
 
-<vhost>
-    <name value = "/" />
-    <text value = "Default virtual-host for this server"/>
-</vhost>
+    <vhost
+        name = "/"
+        />
 
-<workdir>
-    <!-- This is where the Berkeley DB backing store is held      -->
-    <data  value = "data"  />
-    <!-- This is where partially uploaded large messages are held -->
-    <spool value = "spool" />
-    <!-- This is where fully-uploaded large messages are held     -->
-    <store value = "store" />
-</workdir>
+    <directories
+        data  = "data"
+        spool = "spool"
+        store = "store"
+        />
 
-<queue>
-    <name value = "test-small" />
-    <name value = "test-large" />
-</queue>
+    <queues>
+        <queue
+            name = "test-small"
+            />
+        <queue
+            name = "test-large"
+            />
+    </queues>
 
 </config>
