--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -20,16 +20,19 @@
     <queues>
         <queue
             name = "test"
-            block_size = "1024"
-            buffering = "1"
-            max_messages = "10000"
-            purge_on_restart = "0"
-            max_readers = "0"
-            cache_writes = "1"
+            auto-purge = "0"
+            memory-queue-max = "100"
+
+            min-consumers = "1"
+            max-consumers = "10"
+        />
+
+    <!--
+            max-messages = "10000"
+            cache-writes = "1"
             browsable = "1"
-            max_message_size = "1Gb"
-            min_readers = "1"
-            />
+            max-message-size = "1073741824"
+        -->
     </queues>
 
 </config>
