--- a/core/amq_server.cfg
+++ b/core/amq_server.cfg
@@ -17,6 +17,10 @@
         background = "0"
         />
 
+    <resources
+        allowed-memory = "104857600"
+        />
+
     <logging
         directory = "logs"
         console = "amqp_console.log"
