--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -27,6 +27,7 @@
             browsable = "1"
             max-messages = "100000"
             max-message-size = "1073741824"
+            priority-levels = "2"
         />
 
     <!--
