--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -21,17 +21,21 @@
         <queue
             name = "test"
             auto-purge = "0"
-            memory-queue-max = "100"
+            memory-queue-max = "1000"
             min-consumers = "0"
             max-consumers = "10"
             browsable = "1"
+            persistent = "0"
             max-messages = "100000"
             max-message-size = "1073741824"
             priority-levels = "2"
         />
-
-    <!--
-        -->
     </queues>
 
+    <users>
+        <user
+            name = "test"
+            password = "test"
+        />
+    </users>
 </config>
