--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -18,6 +18,7 @@
         />
 
     <queues>
+        <!-- Documentation is in progress -->
         <queue
             name = "test"
             auto-purge = "0"
@@ -31,11 +32,4 @@
             priority-levels = "2"
         />
     </queues>
-
-    <users>
-        <user
-            name = "test"
-            password = "test"
-        />
-    </users>
 </config>
