--- a/core/.cvsignore
+++ b/core/.cvsignore
@@ -160,3 +160,8 @@ amq_field_list.h
 amq_field_list.icl
 amq_field_list_test.c
 amq_field_test.c
+amq_field_list_test
+amq_field_test
+amq_global_test
+amq_global_test.c
+
