--- a/core/amq_server.cfg
+++ b/core/amq_server.cfg
@@ -18,7 +18,7 @@
         />
 
     <resources
-        allowed-memory = "104857600"
+        allowed-memory = "800000000"
         />
 
     <logging
@@ -32,4 +32,8 @@
         <vhost directory = "vh_test"    />
     </vhosts>
 
+    <security mechanism = "PLAIN" />
+    <users>
+        <user login = "test-login" password = "test-password" />
+    </users>
 </config>
