*** empty log message ***

--- a/servers/amq_server.cfg
+++ b/servers/amq_server.cfg
@@ -17,6 +17,10 @@
         background = "0"
         />
 
+    <resources
+        allowed-memory = "800000000"
+        />
+
     <logging
         directory = "logs"
         console = "amqp_console.log"
@@ -28,4 +32,9 @@
         <vhost directory = "vh_test"    />
     </vhosts>
 
+    <!-- Authorisation is disabled for now -->
+    <security mechanism = "NONE" />
+    <users>
+        <user login = "test-login" password = "test-password" />
+    </users>
 </config>
