--- a/servers/vh_test/amq_vhost.cfg
+++ b/servers/vh_test/amq_vhost.cfg
@@ -18,18 +18,18 @@
         />
 
     <queues>
+        <!-- Documentation is in progress -->
         <queue
             name = "test"
-            block_size = "1024"
-            buffering = "1"
-            max_messages = "10000"
-            purge_on_restart = "0"
-            max_readers = "0"
-            cache_writes = "1"
+            auto-purge = "0"
+            memory-queue-max = "1000"
+            min-consumers = "0"
+            max-consumers = "10"
             browsable = "1"
-            max_message_size = "1Gb"
-            min_readers = "1"
-            />
+            persistent = "0"
+            max-messages = "100000"
+            max-message-size = "1073741824"
+            priority-levels = "2"
+        />
     </queues>
-
 </config>
