--- a/core/amq_server.cfg
+++ b/core/amq_server.cfg
@@ -32,7 +32,7 @@
         <vhost directory = "vh_test"    />
     </vhosts>
 
-    <security mechanism = "PLAIN" />
+    <security mechanism = "NONE" />
     <users>
         <user login = "test-login" password = "test-password" />
     </users>
