--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -19,6 +19,9 @@
 
     <queues>
         <!-- Documentation is in progress -->
+        <queue name = "c-in" />
+        <queue name = "java-in" />
+
         <queue
             name = "test"
             auto-purge = "0"
