Fixed response of HANDLE BROWSE to errors

--- a/core/amq_server.cfg
+++ b/core/amq_server.cfg
@@ -23,7 +23,7 @@
 
     <logging
         directory = "logs"
-        console = "amqp_console.log"
+        console = "amq_console.log"
         />
 
     <vhosts>
