--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -18,10 +18,10 @@
         />
 
     <queues>
-        <!-- Documentation is in progress -->
         <queue name = "c-in" />
         <queue name = "java-in" />
 
+        <!-- Documentation is in progress -->
         <queue
             name = "test"
             auto-purge = "0"
@@ -33,6 +33,10 @@
             max-messages = "100000"
             max-message-size = "1073741824"
             priority-levels = "2"
+
+            page-size = "4096"
+            block-size = "1000"
+            extent-size = "25000"
         />
     </queues>
 </config>
