--- a/core/amq_server.cfg
+++ b/core/amq_server.cfg
@@ -18,7 +18,8 @@
         />
 
     <resources
-        allowed-memory = "800000000"
+        max-memory = "800000000"
+        txn-limit = "250"
         />
 
     <logging
@@ -34,6 +35,6 @@
 
     <security mechanism = "NONE" />
     <users>
-        <user login = "test-login" password = "test-password" />
+        <user name = "test-login" password = "test-password" />
     </users>
 </config>
