*** empty log message ***

--- a/servers/vh_test/amq_vhost.cfg
+++ b/servers/vh_test/amq_vhost.cfg
@@ -18,7 +18,10 @@
         />
 
     <queues>
-        <!-- Documentation is in progress -->
+        <!-- for C/Java chat test -->
+        <queue name = "java-in" />
+        <queue name = "c-in" />
+        
         <queue
             name = "test"
             auto-purge = "0"
