--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -17,26 +17,41 @@
         store = "store"
         />
 
-    <queues>
-        <queue name = "c-in" />
-        <queue name = "java-in" />
-
-        <!-- Documentation is in progress -->
+    <template>
         <queue
-            name = "test"
+            name = "default"
             auto-purge = "0"
             memory-queue-max = "1000"
             min-consumers = "0"
-            max-consumers = "10"
+            max-consumers = "0"
             browsable = "1"
             persistent = "0"
             max-messages = "100000"
             max-message-size = "1073741824"
             priority-levels = "2"
-
             page-size = "4096"
             block-size = "1000"
             extent-size = "25000"
+        />
+        <tempq
+            name = "default"
+        />
+        <topic
+            name = "default"
+        />
+    </queues>
+
+    <queues>
+        <!-- for chat demo, remove when no longer needed -->
+        <queue name = "c-in" />
+        <queue name = "java-in" />
+
+        <queue
+            name = "test"
+            auto-purge = "1"
+            memory-queue-max = "100000"
+            max-consumers = "10"
+            extent-size = "100"
         />
     </queues>
 </config>
