*** empty log message ***

--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -39,7 +39,7 @@
         <topic
             name = "default"
         />
-    </queues>
+    </template>
 
     <queues>
         <!-- for chat demo, remove when no longer needed -->
