--- a/core/vh_test/amq_vhost.cfg
+++ b/core/vh_test/amq_vhost.cfg
@@ -33,8 +33,9 @@
             block-size = "1000"
             extent-size = "25000"
         />
-        <tempq
+        <temp-queue
             name = "default"
+            extent-size = "100"
         />
         <topic
             name = "default"
@@ -51,7 +52,16 @@
             auto-purge = "1"
             memory-queue-max = "100000"
             max-consumers = "10"
-            extent-size = "100"
         />
     </queues>
+
+    <topics>
+        <topic name = "test"        />
+        <topic name = "test.blue"   />
+        <topic name = "test.blue.1" />
+        <topic name = "test.blue.2" />
+        <topic name = "test.red"    />
+        <topic name = "test.green"  />
+        <topic name = "testgreen"   />
+    </topics>
 </config>
