--- a/kernel/amq_server.cfg
+++ b/kernel/amq_server.cfg
@@ -33,8 +33,8 @@
         <vhost directory = "vh_test"    />
     </vhosts>
 
-    <security mechanism = "NONE" />
+    <security mechanism = "PLAIN" />
     <users>
-        <user name = "test-login" password = "test-password" />
+        <user name = "guest" password = "guest" />
     </users>
 </config>
