*** empty log message ***

--- a/rfc/.cvsignore
+++ b/rfc/.cvsignore
@@ -1,134 +1,134 @@
 *.gz
 amq_rfc001.gdl
-amq_rfc001.htm
-amq_rfc001_1.htm
-amq_rfc001_2.htm
-amq_rfc001_3.htm
-amq_rfc001_4.htm
-amq_rfc001_bot.htm
-amq_rfc001_toc.htm
-amq_rfc001_top.htm
+amq_rfc001.html
+amq_rfc001_1.html
+amq_rfc001_2.html
+amq_rfc001_3.html
+amq_rfc001_4.html
+amq_rfc001_bot.html
+amq_rfc001_toc.html
+amq_rfc001_top.html
 amq_rfc002.gdl
-amq_rfc002.htm
-amq_rfc002_1.htm
-amq_rfc002_2.htm
-amq_rfc002_3.htm
-amq_rfc002_bot.htm
-amq_rfc002_toc.htm
-amq_rfc002_top.htm
+amq_rfc002.html
+amq_rfc002_1.html
+amq_rfc002_2.html
+amq_rfc002_3.html
+amq_rfc002_bot.html
+amq_rfc002_toc.html
+amq_rfc002_top.html
 amq_rfc003.gdl
-amq_rfc003.htm
-amq_rfc003_1.htm
-amq_rfc003_2.htm
-amq_rfc003_3.htm
-amq_rfc003_4.htm
-amq_rfc003_bot.htm
-amq_rfc003_toc.htm
-amq_rfc003_top.htm
+amq_rfc003.html
+amq_rfc003_1.html
+amq_rfc003_2.html
+amq_rfc003_3.html
+amq_rfc003_4.html
+amq_rfc003_bot.html
+amq_rfc003_toc.html
+amq_rfc003_top.html
 amq_rfc004.gdl
-amq_rfc004.htm
-amq_rfc004_1.htm
-amq_rfc004_2.htm
-amq_rfc004_3.htm
-amq_rfc004_4.htm
-amq_rfc004_5.htm
-amq_rfc004_bot.htm
-amq_rfc004_toc.htm
-amq_rfc004_top.htm
+amq_rfc004.html
+amq_rfc004_1.html
+amq_rfc004_2.html
+amq_rfc004_3.html
+amq_rfc004_4.html
+amq_rfc004_5.html
+amq_rfc004_bot.html
+amq_rfc004_toc.html
+amq_rfc004_top.html
 amq_rfc005.gdl
-amq_rfc005.htm
-amq_rfc005_1.htm
-amq_rfc005_2.htm
-amq_rfc005_3.htm
-amq_rfc005_4.htm
-amq_rfc005_bot.htm
-amq_rfc005_toc.htm
-amq_rfc005_top.htm
+amq_rfc005.html
+amq_rfc005_1.html
+amq_rfc005_2.html
+amq_rfc005_3.html
+amq_rfc005_4.html
+amq_rfc005_bot.html
+amq_rfc005_toc.html
+amq_rfc005_top.html
 amq_rfc006.gdl
-amq_rfc006.htm
-amq_rfc006_1.htm
-amq_rfc006_2.htm
-amq_rfc006_3.htm
-amq_rfc006_4.htm
-amq_rfc006_bot.htm
-amq_rfc006_toc.htm
-amq_rfc006_top.htm
+amq_rfc006.html
+amq_rfc006_1.html
+amq_rfc006_2.html
+amq_rfc006_3.html
+amq_rfc006_4.html
+amq_rfc006_bot.html
+amq_rfc006_toc.html
+amq_rfc006_top.html
 amq_rfc007.gdl
-amq_rfc007.htm
-amq_rfc007_1.htm
-amq_rfc007_2.htm
-amq_rfc007_3.htm
-amq_rfc007_4.htm
-amq_rfc007_bot.htm
-amq_rfc007_toc.htm
-amq_rfc007_top.htm
+amq_rfc007.html
+amq_rfc007_1.html
+amq_rfc007_2.html
+amq_rfc007_3.html
+amq_rfc007_4.html
+amq_rfc007_bot.html
+amq_rfc007_toc.html
+amq_rfc007_top.html
 amq_rfc008.gdl
-amq_rfc008.htm
-amq_rfc008_1.htm
-amq_rfc008_2.htm
-amq_rfc008_3.htm
-amq_rfc008_bot.htm
-amq_rfc008_toc.htm
-amq_rfc008_top.htm
+amq_rfc008.html
+amq_rfc008_1.html
+amq_rfc008_2.html
+amq_rfc008_3.html
+amq_rfc008_bot.html
+amq_rfc008_toc.html
+amq_rfc008_top.html
 amq_rfc009.gdl
-amq_rfc009.htm
-amq_rfc009_1.htm
-amq_rfc009_2.htm
-amq_rfc009_3.htm
-amq_rfc009_4.htm
-amq_rfc009_bot.htm
-amq_rfc009_toc.htm
-amq_rfc009_top.htm
+amq_rfc009.html
+amq_rfc009_1.html
+amq_rfc009_2.html
+amq_rfc009_3.html
+amq_rfc009_4.html
+amq_rfc009_bot.html
+amq_rfc009_toc.html
+amq_rfc009_top.html
 amq_rfc010.gdl
-amq_rfc010.htm
-amq_rfc010_1.htm
-amq_rfc010_2.htm
-amq_rfc010_3.htm
-amq_rfc010_bot.htm
-amq_rfc010_toc.htm
-amq_rfc010_top.htm
+amq_rfc010.html
+amq_rfc010_1.html
+amq_rfc010_2.html
+amq_rfc010_3.html
+amq_rfc010_bot.html
+amq_rfc010_toc.html
+amq_rfc010_top.html
 amq_rfc011.gdl
-amq_rfc011.htm
-amq_rfc011_1.htm
-amq_rfc011_2.htm
-amq_rfc011_3.htm
-amq_rfc011_4.htm
-amq_rfc011_bot.htm
-amq_rfc011_toc.htm
-amq_rfc011_top.htm
+amq_rfc011.html
+amq_rfc011_1.html
+amq_rfc011_2.html
+amq_rfc011_3.html
+amq_rfc011_4.html
+amq_rfc011_bot.html
+amq_rfc011_toc.html
+amq_rfc011_top.html
 amq_rfc012.gdl
-amq_rfc012.htm
-amq_rfc012_1.htm
-amq_rfc012_2.htm
-amq_rfc012_3.htm
-amq_rfc012_4.htm
-amq_rfc012_bot.htm
-amq_rfc012_toc.htm
-amq_rfc012_top.htm
+amq_rfc012.html
+amq_rfc012_1.html
+amq_rfc012_2.html
+amq_rfc012_3.html
+amq_rfc012_4.html
+amq_rfc012_bot.html
+amq_rfc012_toc.html
+amq_rfc012_top.html
 amq_rfc013.gdl
-amq_rfc013.htm
-amq_rfc013_1.htm
-amq_rfc013_2.htm
-amq_rfc013_3.htm
-amq_rfc013_bot.htm
-amq_rfc013_toc.htm
-amq_rfc013_top.htm
+amq_rfc013.html
+amq_rfc013_1.html
+amq_rfc013_2.html
+amq_rfc013_3.html
+amq_rfc013_bot.html
+amq_rfc013_toc.html
+amq_rfc013_top.html
 amq_rfc014.gdl
-amq_rfc014.htm
-amq_rfc014_1.htm
-amq_rfc014_2.htm
-amq_rfc014_3.htm
-amq_rfc014_4.htm
-amq_rfc014_bot.htm
-amq_rfc014_toc.htm
-amq_rfc014_top.htm
+amq_rfc014.html
+amq_rfc014_1.html
+amq_rfc014_2.html
+amq_rfc014_3.html
+amq_rfc014_4.html
+amq_rfc014_bot.html
+amq_rfc014_toc.html
+amq_rfc014_top.html
 amq_rfc015.gdl
-amq_rfc015.htm
-amq_rfc015_1.htm
-amq_rfc015_2.htm
-amq_rfc015_bot.htm
-amq_rfc015_toc.htm
-amq_rfc015_top.htm
+amq_rfc015.html
+amq_rfc015_1.html
+amq_rfc015_2.html
+amq_rfc015_bot.html
+amq_rfc015_toc.html
+amq_rfc015_top.html
 boomake
 boomake.bat
 Makefile*
