*** empty log message ***

--- a/servers/amq_server.cfg
+++ b/servers/amq_server.cfg
@@ -18,12 +18,13 @@
         />
 
     <resources
-        allowed-memory = "0"
+        max-memory = "800000000"
+        txn-limit = "1000"
         />
 
     <logging
         directory = "logs"
-        console = "amqp_console.log"
+        console = "amq_console.log"
         />
 
     <vhosts>
@@ -32,9 +33,8 @@
         <vhost directory = "vh_test"    />
     </vhosts>
 
-    <!-- Authorisation is disabled for now -->
-    <security mechanism = "NONE" />
+    <security mechanism = "PLAIN" />
     <users>
-        <user login = "test-login" password = "test-password" />
+        <user name = "guest" password = "guest" />
     </users>
 </config>
