--- a/servers/vh_test/amq_vhost.cfg
+++ b/servers/vh_test/amq_vhost.cfg
@@ -17,22 +17,51 @@
         store = "store"
         />
 
-    <queues>
-        <!-- for C/Java chat test -->
-        <queue name = "java-in" />
-        <queue name = "c-in" />
-        
+    <template>
         <queue
-            name = "test"
+            name = "default"
             auto-purge = "0"
             memory-queue-max = "1000"
             min-consumers = "0"
-            max-consumers = "10"
+            max-consumers = "0"
             browsable = "1"
             persistent = "0"
             max-messages = "100000"
             max-message-size = "1073741824"
             priority-levels = "2"
+            page-size = "4096"
+            block-size = "1000"
+            extent-size = "25000"
+        />
+        <temp-queue
+            name = "default"
+            extent-size = "100"
+        />
+        <topic
+            name = "default"
+        />
+    </template>
+
+    <queues>
+        <!-- for chat demo, remove when no longer needed -->
+        <queue name = "c-in" />
+        <queue name = "java-in" />
+
+        <queue
+            name = "test"
+            auto-purge = "1"
+            memory-queue-max = "100000"
+            max-consumers = "10"
         />
     </queues>
+
+    <topics>
+        <topic name = "test"        />
+        <topic name = "test.blue"   />
+        <topic name = "test.blue.1" />
+        <topic name = "test.blue.2" />
+        <topic name = "test.red"    />
+        <topic name = "test.green"  />
+        <topic name = "testgreen"   />
+    </topics>
 </config>
