--- a/kernel/vh_test/amq_vhost.cfg
+++ b/kernel/vh_test/amq_vhost.cfg
@@ -33,12 +33,12 @@
             block-size = "1000"
             extent-size = "25000"
         />
-        <temp-queue
-            name = "default"
-            extent-size = "100"
-        />
         <topic
             name = "default"
+        />
+        <subscription
+            name = "default"
+            extent-size = "100"
         />
     </template>
 
