*** empty log message ***

--- a/kernel/vh_test/amq_vhost.cfg
+++ b/kernel/vh_test/amq_vhost.cfg
@@ -30,8 +30,13 @@
             max-message-size = "1073741824"
             priority-levels = "2"
             page-size = "4096"
-            block-size = "1000"
+            block-size = "2000"
             extent-size = "25000"
+        />
+        <queue
+            name = "temporary"
+            page-size = "4096"
+            block-size = "2000"
         />
         <topic
             name = "default"
