--- a/kernel/vh_test/amq_vhost.cfg
+++ b/kernel/vh_test/amq_vhost.cfg
@@ -61,12 +61,14 @@
     </queues>
 
     <topics>
-        <topic name = "test"        />
-        <topic name = "test.blue"   />
-        <topic name = "test.blue.1" />
-        <topic name = "test.blue.2" />
-        <topic name = "test.red"    />
-        <topic name = "test.green"  />
-        <topic name = "testgreen"   />
+        <topic name = "test"         />
+        <topic name = "test.blue"    />
+        <topic name = "test.blue.1"  />
+        <topic name = "test.blue.2"  />
+        <topic name = "test.red"     />
+        <topic name = "test.green"   />
+        <topic name = "test.green.1" />
+        <topic name = "test.green.2" />
+        <topic name = "testgreen"    />
     </topics>
 </config>
