--- a/servers/vh_test/amq_vhost.cfg
+++ b/servers/vh_test/amq_vhost.cfg
@@ -30,15 +30,20 @@
             max-message-size = "1073741824"
             priority-levels = "2"
             page-size = "4096"
-            block-size = "1000"
+            block-size = "2000"
             extent-size = "25000"
         />
-        <temp-queue
-            name = "default"
-            extent-size = "100"
+        <queue
+            name = "temporary"
+            page-size = "4096"
+            block-size = "2000"
         />
         <topic
             name = "default"
+        />
+        <subscription
+            name = "default"
+            extent-size = "100"
         />
     </template>
 
@@ -56,12 +61,14 @@
     </queues>
 
     <topics>
-        <topic name = "test"        />
-        <topic name = "test.blue"   />
-        <topic name = "test.blue.1" />
-        <topic name = "test.blue.2" />
-        <topic name = "test.red"    />
-        <topic name = "test.green"  />
-        <topic name = "testgreen"   />
+        <topic name = "test"         />
+        <topic name = "test.blue"    />
+        <topic name = "test.blue.1"  />
+        <topic name = "test.blue.2"  />
+        <topic name = "test.red"     />
+        <topic name = "test.green"   />
+        <topic name = "test.green.1" />
+        <topic name = "test.green.2" />
+        <topic name = "testgreen"    />
     </topics>
 </config>
